--- a/demo site 2024/ECOMMERCE.DEMO.html
+++ b/demo site 2024/ECOMMERCE.DEMO.html
@@ -5,29 +5,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
 		
-								<title>Mercurius</title>
-								<meta http-equiv="content-language" content="pt-br"/>
-								<meta name="author" content="Tray Tecnologia"/>
-								<meta name="copyright" content="Tray Tecnologia"/>
-								<meta name="robots" content="FOLLOW,INDEX,ALL"/>
-								<meta name="MSSmartTagsPreventParsing" content="true"/>
-								<meta name="description" content="-" />
-								<meta name="keywords" content="-" />
-								<meta http-equiv='expires' content='Sat, 19 Oct 2024 00:00:00 GMT'>
-								<meta property="og:url" content="https://mercurius.commercesuite.com.br" />
-								<link rel="canonical" href="https://mercurius.commercesuite.com.br"/>
-								<base id="tag_base" href="https://mercurius.commercesuite.com.br/loja/"/>
-								<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE"/>
-								<meta property="og:title" content="Mercurius" />
-								<meta property="og:description" content="-" />
-								<meta property="og:phone_number" content="(47) 9668-1254" />
-								<meta property="og:street-address" content="Rua 1500, 1258" />
-								<meta property="og:locality" content="Balneário Camboriú" />
-								<meta property="og:region" content="SC" />
-								<meta property="og:email" content="contato@strongway.com.br" />
-								<meta property="og:type" content="website" />
-								<meta property="og:image" content="https://images.tcdn.com.br/img/img_prod/1016897/1664801066_desktop.png" />
-								<link rel="shortcut icon" href="https://images.tcdn.com.br/img/img_prod/1016897/1644931358_favicon.ico?670a3ded3c6bc" type="image/x-icon"/><meta setting='keep_buying' content='1' /></meta><meta setting='liveshop_alert_position' content='0' /></meta>
+								<title>CK WEB</title>
+								
 								<link rel="preconnect" href="//images.tcdn.com.br" />
 								
 								<link rel="preconnect" href="//ssl.google-analytics.com" />
