--- a/demo site 2024/Index.html
+++ b/demo site 2024/Index.html
@@ -70,7 +70,7 @@
         <button class="button" onclick="window.location.href='J1.html'">JORNAL </button>
          <button class="button" onclick="window.location.href='G1.html'">GAME</button>
         <button class="button" onclick="window.location.href='F1.html'">FILME GRÁTIS</button>
-        <button class="button" onclick="window.location.href='/ec/Index.html'">ECOMMERCE DEMO</button>
+        <button class="button" onclick="window.location.href='C:\Users\CaioF\OneDrive\Documentos\PROJETOS WEB\SITE OFICIAL DA CK WEB\demo site 2024\CF STORE\index.html'">ECOMMERCE DEMO</button>
 
         
         
