--- a/demo site 2024/Index.html
+++ b/demo site 2024/Index.html
@@ -62,7 +62,10 @@
     <div class="button-container">
         <button class="button" onclick="window.location.href='comanda.html'">Comanda Pedido</button>
         <button class="button" onclick="window.location.href='S.D.A.html'">Gerador De Senhas</button>
-        <button class="button" onclick="window.location.href='CF STORE/Index.html'">E-COMMERCE 1</button>
+        <button class="button" onclick="window.location.href='CF STORE/Index.html'">E-commerce</button>
+        <button class="button" onclick="window.location.href='Site2/Index.html'">Portifólio Simples I.A</button>
+        <button class="button" onclick="window.location.href='Site3/Index.html'">Portifólio Clínica médica</button>
+
     
         
 
