--- a/demo site 2024/Index.html
+++ b/demo site 2024/Index.html
@@ -65,8 +65,9 @@
         <button class="button" onclick="window.location.href='CF STORE/Index.html'">E-commerce</button>
         <button class="button" onclick="window.location.href='Site1/Index.html'">Portifólio Construção</button>
         <button class="button" onclick="window.location.href='Site2/Index.html'">Portifólio Simples I.A</button>
-        <button class="button" onclick="window.location.href='Site3/Index.html'">Portifólio Clínica médica</button>
-        <button class="button" onclick="window.location.href='Site4/Index.html'">Portifólio Restaurante</button>
+        <button class="button" onclick="window.location.href='Site3/Index.html'">Portifólio de  Clínica médica</button>
+        <button class="button" onclick="window.location.href='Site4/Index.html'">Portifólio de Restaurante</button>
+        <button class="button" onclick="window.location.href='Site5/Index.html'">Portifólio de  Viagem</button>
 
     
         
