--- a/demo site 2024/Index.html
+++ b/demo site 2024/Index.html
@@ -62,12 +62,14 @@
     <div class="button-container">
         <button class="button" onclick="window.location.href='comanda.html'">Comanda Pedido</button>
         <button class="button" onclick="window.location.href='S.D.A.html'">Gerador De Senhas</button>
-        <button class="button" onclick="window.location.href='CF STORE/Index.html'">E-commerce</button>
+        <button class="button" onclick="window.location.href='CF STORE/Index.html'">E-commerce 1</button>
+        <button class="button" onclick="window.location.href='Site6/Index.html'">E-commerce 2</button>
         <button class="button" onclick="window.location.href='Site1/Index.html'">Portifólio Construção</button>
         <button class="button" onclick="window.location.href='Site2/Index.html'">Portifólio Simples I.A</button>
         <button class="button" onclick="window.location.href='Site3/Index.html'">Portifólio de  Clínica médica</button>
         <button class="button" onclick="window.location.href='Site4/Index.html'">Portifólio de Restaurante</button>
         <button class="button" onclick="window.location.href='Site5/Index.html'">Portifólio de  Viagem</button>
+        <button class="button" onclick="window.location.href='PG-SISTEM/Index.html'">SERVIÇOS ONLINE</button>
 
     
         
