--- a/demo site 2024/PG-SISTEM/index.html
+++ b/demo site 2024/PG-SISTEM/index.html
@@ -222,7 +222,7 @@
 
         <div class="image-container">
             <div class="value-info">Seja bem-vindo(a)!</div>
-            <img src="/Sistema Serviços Online Web.gif" alt="Imagem Placeholder">
+            <img src="/demo site 2024/PG-SISTEM/Sistema Serviços Online Web.jpg" alt="Imagem Placeholder">
             <p>SISTEMA EM DESENVOLVIMENTO</p>
             <a href="https://wa.me/5519996594263?text=Olá, Quero adiquirir o Sistema." target="_blank">
                 <button class="pulse-button">ADIQUIRA O SISTEMA AQUI!</button>
