--- a/demo site 2024/PG-SISTEM/index.html
+++ b/demo site 2024/PG-SISTEM/index.html
@@ -257,7 +257,7 @@
         </div>
 
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Video Tutorial"></iframe>
+            <iframe src="" title="Video Tutorial"></iframe>
         </div>
     </div>
 
