--- a/demo site 2024/PG-SISTEM/index.html
+++ b/demo site 2024/PG-SISTEM/index.html
@@ -223,9 +223,9 @@
         <div class="image-container">
             <div class="value-info">Seja bem-vindo(a)!</div>
             <img src="/demo site 2024/PG-SISTEM/Sistema Serviços Online Web.jpg" alt="Imagem Placeholder">
-            <p>SISTEMA EM DESENVOLVIMENTO</p>
+            <p>NOME DA SUA EMPRESA</p>
             <a href="https://wa.me/5519996594263?text=Olá, Quero adiquirir o Sistema." target="_blank">
-                <button class="pulse-button">ADIQUIRA O SISTEMA AQUI!</button>
+                <button class="pulse-button">SUPORTE TÉCNICO</button>
             </a>
         </div>
     </div>
@@ -265,6 +265,7 @@
     </div>
 
     <div class="footer" style="display: none;" id="main-footer">
+        <p>Versão 1.0</p> <br>
         Todos os direitos reservados a CK WEB
     </div>
 
