NOVA ATUALIZAÇÃO DO SITE CK WEB SYSTEM 1.0

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             <a href="#trainers">Programadores</a>
             <a href="#blogs">Projetos</a>
             <a href="/demo site 2024/Index.html">Demo.site</a>
+            <a href="/PJ.CAIO/Index.html">CK WEB SYSTEM</a>
+
         </nav>
 
     </header>
