ATUALIZAÇÃO DE SISTEMA

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <!--Fim feedback-->
 
         <section id="blogs" class="blogs">
-            <h1 class="heading"> <span>Projetos Em Desenvolvimentos</span> </h1>
+            <h1 class="heading"> <span>SISTEMA</span> </h1>
             <div class="swiper blogs-slider">
                 <div class="swiper-wrapper">
 
@@ -384,11 +384,11 @@
                             <img src="img/post1 (4).jpeg" alt="">
                         </div>
                         <div class="content">
-                            <div class="link"> <a href="#">I.A CHAT</a> <span>|</span> <a href="#">Esta em desenvolvimento há 5 dias</a>
+                            <div class="link"> <a href="#">WEBcliente</a> <span>|</span> <a href="#">Sistemas De Cadastro</a>
                             </div>
-                            <h3>Criado para ajudar a tirar duvidas dos clieentes...</h3>
-                            <p>A I.A CHAT não tem integração com outras I.A ela trabalha de forma offiline.</p>
-                            <a href="https://ck-web-oficicial.netlify.app/projeto%20i.a%20do%20caio%20-%20ck%20web/" class="btn">Testar</a>
+                            <h3>Criado Para facilitar o cadastro de clientes</h3>
+                            <p>o WEBclientes, e um sistema em nuvem dando mais segurança para você!</p>
+                            <a href="/CKWEB/Longin.html" class="btn">Testar</a>
                         </div>
                     </div>
 
